--- a/package.json
+++ b/package.json
@@ -46,12 +46,10 @@
     "ts-gif": "^0.1.2"
   },
   "devDependencies": {
-    "@iconify-json/carbon": "^1.2.7",
-    "@shikijs/vitepress-twoslash": "^2.5.0",
+    "@stacksjs/docs": "^0.69.3",
     "@stacksjs/eslint-config": "^3.15.1-beta.4",
     "@types/bun": "^1.2.2",
     "@types/cwise-compiler": "^1.1.6",
-    "@vite-pwa/vitepress": "^0.5.3",
     "bumpp": "^10.0.3",
     "bun-plugin-dtsx": "^0.21.9",
     "bunfig": "^0.7.0",
@@ -60,11 +58,7 @@
     "lint-staged": "^15.4.3",
     "simple-git-hooks": "^2.11.1",
     "typescript": "^5.7.3",
-    "unocss": "^65.5.0",
-    "unplugin-icons": "^22.1.0",
-    "unplugin-vue-components": "^28.2.0",
-    "vite-plugin-pwa": "^0.21.1",
-    "vitepress": "^1.6.3"
+    "unocss": "^65.5.0"
   },
   "overrides": {
     "unconfig": "0.3.10"
